fix original loss

--- a/Trees.ipynb
+++ b/Trees.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,6 @@
     "    criterion = nn.NLLLoss(reduce=False)\n",
     "    for p, pred in path_probs:\n",
     "        loss += (p.squeeze()*criterion(pred, y_true)).mean()\n",
-    "        print(loss.shape)\n",
     "    return loss.mean()\n",
     "\n",
     "def tree_logloss(path_probs, y_true):\n",
@@ -158,7 +157,7 @@
     "    loss = 0\n",
     "    criterion = nn.NLLLoss()\n",
     "    for p, pred in path_probs:\n",
-    "        loss -= p*criterion(pred, y_true)\n",
+    "        loss -= (p.squeeze()*criterion(pred, y_true)).mean()\n",
     "    return -torch.log(loss.mean())"
    ]
   },
@@ -996,19 +995,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([1])\n",
-      "torch.Size([1])\n",
-      "torch.Size([1])\n",
-      "torch.Size([1])\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -1017,7 +1006,7 @@
        "[torch.FloatTensor of size 1]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
