add knowledge distillation train

--- a/Distilling.ipynb
+++ b/Distilling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,14 +57,14 @@
     "        self.fc1 = nn.Linear(320, 50)\n",
     "        self.fc2 = nn.Linear(50, 10)\n",
     "\n",
-    "    def forward(self, x, T=1):\n",
+    "    def forward(self, x):\n",
     "        x = F.relu(F.max_pool2d(self.conv1(x), 2))\n",
     "        x = F.relu(F.max_pool2d(self.conv2_drop(self.conv2(x)), 2))\n",
     "        x = x.view(-1, 320)\n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = F.dropout(x, training=self.training)\n",
     "        x = self.fc2(x)\n",
-    "        return F.log_softmax(x/T, dim=1)\n",
+    "        return x\n",
     "\n",
     "    \n",
     "class MLPNet(nn.Module):\n",
@@ -76,7 +76,7 @@
     "        x = x.view(-1, 28*28)\n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = F.relu(self.fc2(x))\n",
-    "        return F.log_softmax(x/T, dim=1)\n",
+    "        return x\n",
     "\n",
     "    \n",
     "def validate(model, batches_val):\n",
@@ -91,15 +91,19 @@
     "    return accuracy_score(y_true, y_pred)\n",
     "\n",
     "\n",
-    "def dist_loss(out, labels, teacher, T, alpha=1):\n",
+    "def distill_loss(out, labels, teacher, T, alpha=1):\n",
     "    # KLD instead of cross-entropy\n",
     "    f = nn.NLLLoss()\n",
-    "    return f(out, labels) + nn.KLDivLoss()(out, teacher)*alpha*T*T"
+    "    out_sm = F.log_softmax(out/T, dim=1)\n",
+    "    teacher_sm = F.log_softmax(out/T, dim=1)\n",
+    "    term1 = f(F.log_softmax(out, dim=1), labels)\n",
+    "    term2 = nn.KLDivLoss()(out_sm, teacher_sm.detach())*alpha*T*T\n",
+    "    return term1 + term2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,55 +162,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       " 3\n",
-       " 4\n",
-       " 8\n",
-       " 5\n",
-       " 9\n",
-       " 5\n",
-       " 2\n",
-       " 6\n",
-       " 0\n",
-       " 5\n",
-       "[torch.LongTensor of size 10]"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Variable containing:\n",
-       " 0.1028\n",
+       "-0.1736\n",
        "[torch.FloatTensor of size 1]"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nn.NLLLoss()(out, Variable(labels))"
+    "nn.KLDivLoss()(out, teacher.detach())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "you can only change requires_grad flags of leaf variables. If you want to use a computed variable in a subgraph that doesn't require differentiation use var_no_grad = var.detach().",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-ee5ef7ed2a9e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mteacher\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrequires_grad\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m: you can only change requires_grad flags of leaf variables. If you want to use a computed variable in a subgraph that doesn't require differentiation use var_no_grad = var.detach()."
+     ]
+    }
+   ],
+   "source": [
+    "teacher.detach()"
    ]
   },
   {
@@ -378,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -407,45 +401,45 @@
      "output_type": "stream",
      "text": [
       "EPOCH: 0\n",
-      "0.0786\n",
-      "2.519871234893799 0.8577690431810916\n",
-      "1.9651288986206055 0.4190021920343861\n",
-      "2.404747247695923 0.33846910459490026\n",
-      "1.8743788003921509 0.32285841274261473\n",
-      "2.3775455951690674 0.2929125738083385\n",
-      "3.9713432788848877 0.26570564077064046\n",
+      "0.088\n",
+      "3.3430638313293457 0.8510436536222696\n",
+      "2.7960424423217773 0.42013787904707717\n",
+      "2.2679131031036377 0.34147757189301775\n",
+      "2.175872564315796 0.31622400746087076\n",
+      "2.2482104301452637 0.2827621094827773\n",
+      "1.7645008563995361 0.2706581936685834\n",
       "EPOCH: 1\n",
-      "0.9756\n",
-      "2.476496696472168 0.24641338495412493\n",
-      "2.035698652267456 0.2383810167213669\n",
-      "3.515939235687256 0.2246983324928442\n",
-      "2.2007484436035156 0.219863897053001\n",
-      "2.840733051300049 0.22937279218275217\n",
-      "2.179814577102661 0.21133869342284742\n",
+      "0.9732\n",
+      "2.3818540573120117 0.2570315435518278\n",
+      "1.991175889968872 0.23137446979264495\n",
+      "1.9281914234161377 0.23398442622000584\n",
+      "2.214446783065796 0.228740786645707\n",
+      "2.1853623390197754 0.23931755483630696\n",
+      "4.643822193145752 0.21680072463536634\n",
       "EPOCH: 2\n",
-      "0.9806\n",
-      "1.862501859664917 0.20715391832842578\n",
-      "2.0298733711242676 0.20375876118706945\n",
-      "1.8114639520645142 0.20473041690396349\n",
-      "2.1009151935577393 0.20983489174311398\n",
-      "1.7443807125091553 0.18402129105722997\n",
-      "2.7196121215820312 0.20471289938790868\n",
+      "0.9812\n",
+      "2.310992956161499 0.20182792831095867\n",
+      "1.740277886390686 0.2051407995767513\n",
+      "1.8288999795913696 0.2029360617431521\n",
+      "2.1287429332733154 0.19039480391783217\n",
+      "1.7041432857513428 0.19860290015446663\n",
+      "2.1531929969787598 0.19763636078608943\n",
       "EPOCH: 3\n",
-      "0.983\n",
-      "2.0051004886627197 0.19047316831730132\n",
-      "2.773045301437378 0.1960992682632641\n",
-      "3.0417144298553467 0.19267630136001845\n",
-      "1.84195876121521 0.18145983694877213\n",
-      "2.0361733436584473 0.17788843801156326\n",
-      "2.326615810394287 0.18020267077093013\n",
+      "0.9823\n",
+      "2.0464532375335693 0.20229402248740372\n",
+      "2.5500807762145996 0.17720872070675522\n",
+      "2.536996603012085 0.19284904746242681\n",
+      "2.1391892433166504 0.1734705840072893\n",
+      "1.823582649230957 0.18703137124369096\n",
+      "1.7932226657867432 0.19080921686431976\n",
       "EPOCH: 4\n",
-      "0.9852\n",
-      "2.596776247024536 0.16723552431371355\n",
-      "1.6592810153961182 0.17326692616660147\n",
-      "2.032378673553467 0.17189777309154305\n",
-      "2.7002010345458984 0.17122371526498317\n",
-      "1.9229837656021118 0.17072560629591316\n",
-      "1.5594106912612915 0.17249606241153015\n"
+      "0.9824\n",
+      "1.7043308019638062 0.17624145606076855\n",
+      "1.894330620765686 0.17114954308810412\n",
+      "2.235199451446533 0.17260829130101774\n",
+      "1.8584163188934326 0.16305027056967084\n",
+      "1.7355749607086182 0.15721027177123686\n",
+      "1.8553497791290283 0.16942519198744413\n"
      ]
     }
    ],
@@ -464,7 +458,7 @@
     "        features = Variable(features)\n",
     "        targets = Variable(targets)\n",
     "        out = model(features)\n",
-    "        loss = criterion(out, targets)\n",
+    "        loss = criterion(F.log_softmax(out, dim=1), targets)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        train_loss += [loss.data[0]]\n",
@@ -482,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -490,45 +484,45 @@
      "output_type": "stream",
      "text": [
       "EPOCH: 0\n",
-      "0.0868\n",
-      "2.4339194297790527 1.281710759960115\n",
-      "2.5909934043884277 1.154912054359913\n",
-      "2.312778949737549 1.1212260313797742\n",
-      "2.7982451915740967 1.1218074560388922\n",
-      "3.1012041568756104 1.0922972073554993\n",
-      "2.335113763809204 1.0780489094108343\n",
+      "0.106\n",
+      "2.6320433616638184 1.605462523818016\n",
+      "2.6214921474456787 1.526390792965889\n",
+      "2.5565125942230225 1.5039487244188785\n",
+      "2.7537596225738525 1.4267951794117688\n",
+      "2.78882098197937 1.338061695612967\n",
+      "2.969398021697998 1.2950184574052692\n",
       "EPOCH: 1\n",
-      "0.6513\n",
-      "2.244574785232544 1.0718755698390305\n",
-      "2.707176685333252 1.041054245964624\n",
-      "2.437919855117798 1.0873546012192965\n",
-      "3.0367701053619385 1.0623042701147496\n",
-      "2.3025853633880615 1.0523403420951218\n",
-      "2.5725345611572266 1.0680838023247197\n",
+      "0.5508\n",
+      "2.7672393321990967 1.2906241402179002\n",
+      "2.3240065574645996 1.2787590429186821\n",
+      "2.6269984245300293 1.2688658639788628\n",
+      "2.5018692016601562 1.2613810243895278\n",
+      "2.7148659229278564 1.2835158790051937\n",
+      "2.7108378410339355 1.2717669401466847\n",
       "EPOCH: 2\n",
-      "0.6588\n",
-      "2.3025853633880615 1.0417463421588764\n",
-      "2.4176878929138184 1.0324794520940632\n",
-      "2.245634078979492 1.0593762391423807\n",
-      "2.5138306617736816 1.032323133953847\n",
-      "3.0049571990966797 1.0340886754356324\n",
-      "2.774027109146118 1.0594505604356528\n",
+      "0.5599\n",
+      "2.3090381622314453 1.2524490236639976\n",
+      "2.567070960998535 1.2493149854838848\n",
+      "2.50915789604187 1.2678505235612392\n",
+      "2.518629312515259 1.259647961884737\n",
+      "2.3025853633880615 1.2522857138365506\n",
+      "2.6223530769348145 1.1735659117400645\n",
       "EPOCH: 3\n",
-      "0.6507\n",
-      "2.2482972145080566 0.9655954087497229\n",
-      "2.1898789405822754 0.828860950259259\n",
-      "2.588641405105591 0.8287117438032292\n",
-      "2.163239002227783 0.8238641455876641\n",
-      "2.395068407058716 0.816756155544892\n",
-      "2.046461820602417 0.8145547002084204\n",
+      "0.6464\n",
+      "2.3260626792907715 1.0507244988897582\n",
+      "2.4671120643615723 1.042844795199111\n",
+      "2.797755718231201 1.042956533075543\n",
+      "2.5100579261779785 1.0464946614067303\n",
+      "2.163175344467163 1.033682730421424\n",
+      "2.5838637351989746 1.019644301354885\n",
       "EPOCH: 4\n",
-      "0.7492\n",
-      "2.129333734512329 0.8245511711740401\n",
-      "2.0778965950012207 0.8088409069133923\n",
-      "2.6978611946105957 0.8012612408763089\n",
-      "2.225705146789551 0.7856495016154368\n",
-      "2.1744911670684814 0.7875671116658487\n",
-      "2.1297948360443115 0.8258959797095158\n"
+      "0.6603\n",
+      "2.8707222938537598 1.041290293518745\n",
+      "2.16021728515625 1.0223321169186383\n",
+      "2.3799052238464355 1.0186963304285892\n",
+      "2.172685384750366 1.0176512063506962\n",
+      "2.1938281059265137 1.034752689001354\n",
+      "2.364133834838867 1.0183450850769877\n"
      ]
     }
    ],
@@ -547,13 +541,121 @@
     "        features = Variable(features)\n",
     "        targets = Variable(targets)\n",
     "        out = model_mlp(features)\n",
-    "        loss = criterion(out, targets)\n",
+    "        loss = criterion(F.log_softmax(out, dim=1), targets)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        train_loss += [loss.data[0]]\n",
     "        if (i + 1) % 1000 == 0:\n",
     "            print(np.max(train_loss), np.mean(train_loss))\n",
     "            train_loss = []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Train MLP with distillation loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPOCH: 0\n",
+      "0.1053\n",
+      "2.4506101608276367 1.0127332982420922\n",
+      "2.4707589149475098 0.8858727484801784\n",
+      "2.3847155570983887 0.8652417615484447\n",
+      "2.117615222930908 0.8130836763428524\n",
+      "2.5091567039489746 0.8332938201297074\n",
+      "2.2437922954559326 0.8160942573484499\n",
+      "EPOCH: 1\n",
+      "0.6932\n",
+      "2.991323471069336 0.8001047033295036\n",
+      "2.4121506214141846 0.7835619333037175\n",
+      "2.2176852226257324 0.7993163074050099\n",
+      "2.1255030632019043 0.770697611205047\n",
+      "2.687572717666626 0.7975997999751707\n",
+      "1.8874967098236084 0.7750216433053138\n",
+      "EPOCH: 2\n",
+      "0.6934\n",
+      "2.0765976905822754 0.7638222025652358\n",
+      "2.196305751800537 0.76588880770572\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_loss = []\n",
+    "val_loss = []\n",
+    "model_mlp = MLPNet()\n",
+    "optimizer = optim.Adam(model_mlp.parameters())\n",
+    "for epoch in range(n_epochs):\n",
+    "    print('EPOCH: {}'.format(epoch))\n",
+    "    val_loss += [validate(model_mlp, test_loader)]\n",
+    "    print(val_loss[-1])\n",
+    "    for i, batch in enumerate(train_loader):\n",
+    "        optimizer.zero_grad()\n",
+    "        features, targets = batch\n",
+    "        features = Variable(features)\n",
+    "        targets = Variable(targets)\n",
+    "        out = model_mlp(features)\n",
+    "        teacher = model(features)\n",
+    "        loss = distill_loss(out, targets, teacher, 5)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        train_loss += [loss.data[0]]\n",
+    "        if (i + 1) % 1000 == 0:\n",
+    "            print(np.max(train_loss), np.mean(train_loss))\n",
+    "            train_loss = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Variable containing:\n",
+       " 2.3101\n",
+       "[torch.FloatTensor of size 1]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distill_loss(Variable(out.data), targets, Variable(teacher.data), 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Variable containing:\n",
+       "-1.7975\n",
+       "[torch.FloatTensor of size 1]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nn.KLDivLoss()(out, teacher.detach())*10"
    ]
   },
   {
