--- a/Trees.ipynb
+++ b/Trees.ipynb
@@ -220,7 +220,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "net = Node(28*28, 10)"
+    "net = Node(28*28, 10)\n",
+    "net.build_tree(2)"
    ]
   },
   {
